# vashe_poh

./: .dockerignore  .gitignore  LICENSE  README.md  docker-compose.yaml  popa.py  pyproject.toml
.github/workflows/: codeql-analysis.yml
app-fastapi/: Dockerfile  api.py  celery_settings.py  db.py  main.py  pyproject.toml  requirements.txt  schemas.py  services.py  tasks.py
flask_os/: Dockerfile  README.md  alembic.ini  app.py  authorization.py  config.py  data.db  db.py  main.py  models.py  pyproject.toml  requirements.txt  views.py
flask_os/alembic/: env.py
flask_os/alembic/versions/: 3a6041d6c2b9_.py
flask_os/migrations/: alembic.ini  env.py
flask_os/migrations/versions/: 2079b7926907_initial_migration.py
flask_os/registration/: blueprint.py
flask_os/static/: style.css
flask_os/templates/: base.html  index.html  info.html
frame/: authorization.py  general.py
frame/templates/: info.html
nginx/: default.conf
