[tool.poetry]
name = "vashe_poh"
version = "0.1.0"
description = ""
authors = ["AntonGrebenyukov <agrebenyukov.exceedteam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
ormar = "^0.11.0"
pymongo = "^4.1.0"
uvicorn = "^0.17.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
