[tool.poetry]
name = "vashe_poh"
version = "0.1.0"
description = ""
authors = ["AntonGrebenyukov <agrebenyukov.exceedteam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.75.1"
uvicorn = "^0.17.6"
python-multipart = "^0.0.5"
celery = "^5.2.6"
rabbitmq = "^0.2.0"
python-dotenv = "^0.20.0"
flower = "^1.0.0"
flake8 = "^4.0.1"
motor = "2.5.1"
aiofiles = "^0.8.0"
Pillow = "^9.1.0"
pre-commit = "^2.19.0"
pep8-naming = "^0.12.1"
flake8-isort = "^4.1.1"
flake8-broken-line = "^0.4.0"
flake8-return = "^1.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
