[tool.poetry]
name = "flask_os"
version = "0.1.0"
description = ""
authors = ["amiktadov <amiktadov.exceedteam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
