[tool.poetry]
name = "flask_os"
version = "0.1.0"
description = ""
authors = ["amiktadov <amiktadov.exceedteam@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.1"
Flask-SQLAlchemy = "^2.5.1"
Flask-JWT-Extended = "^4.3.1"
passlib = "^1.7.4"
SQLAlchemy = "^1.4.35"
bcrypt = "^3.2.0"
alembic = "^1.7.7"
python-dotenv = "^0.20.0"
psycopg2-binary = "^2.9.3"
Flask-Migrate = "^3.1.0"
gunicorn = "^20.1.0"
flake8 = "^4.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
